kubernetes/result_server/result_service.yml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    name: result-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http-web
      targetPort: 80
      #nodePort: 30002
  selector:
    name: result-app-pod
