kubernetes/result_server/result_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: result-service-route
  labels:
    name: result-service
spec:
  # The public host will be auto-generated if you leave 'host' blank
  # host: result-app.your-domain.com 
  to:
    kind: Service
    name: result-service
    weight: 100
  port:
    # This matches the 'port' defined in your Service (80)
    targetPort: http-web
  wildcardPolicy: None
